--- a/src/jamtaba/resources/jamtaba.qrc
+++ b/src/jamtaba/resources/jamtaba.qrc
@@ -287,5 +287,6 @@
         <file>click.wav</file>
         <file>loading.gif</file>
         <file>../../../qtlogging.ini</file>
+        <file>../../../../bateria mono.ogg</file>
     </qresource>
 </RCC>
