--- a/src/jamtaba/gui/NinjamPanel.ui
+++ b/src/jamtaba/gui/NinjamPanel.ui
@@ -382,10 +382,16 @@
          <item row="0" column="4" alignment="Qt::AlignHCenter">
           <widget class="QLabel" name="labelMetronomeIcon">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
            </property>
            <property name="text">
             <string/>
