--- a/src/jamtaba/gui/mainframe.ui
+++ b/src/jamtaba/gui/mainframe.ui
@@ -52,17 +52,17 @@
        </sizepolicy>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
-       <property name="sizeConstraint">
-        <enum>QLayout::SetDefaultConstraint</enum>
-       </property>
        <property name="leftMargin">
-        <number>6</number>
+        <number>3</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
        </property>
        <property name="rightMargin">
-        <number>6</number>
+        <number>3</number>
        </property>
        <property name="bottomMargin">
-        <number>6</number>
+        <number>4</number>
        </property>
        <item>
         <widget class="QWidget" name="topWidget" native="true">
@@ -112,19 +112,6 @@
            </widget>
           </item>
          </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="Line" name="line">
-         <property name="autoFillBackground">
-          <bool>false</bool>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Sunken</enum>
-         </property>
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
         </widget>
        </item>
        <item>
@@ -244,8 +231,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>694</width>
-                <height>674</height>
+                <width>608</width>
+                <height>659</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -307,31 +294,17 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="leftMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
        <property name="topMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
        <property name="rightMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
        <property name="bottomMargin">
-        <number>6</number>
+        <number>0</number>
        </property>
-       <item>
-        <widget class="QLabel" name="chatLabel">
-         <property name="text">
-          <string>Chat</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="Line" name="chatDivider">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
        <item>
         <widget class="QTabWidget" name="chatTabWidget">
          <property name="sizePolicy">
@@ -356,7 +329,7 @@
      <x>0</x>
      <y>0</y>
      <width>1160</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuPreferences">
