--- a/Client/src/jamtaba/gui/pluginscandialog.ui
+++ b/Client/src/jamtaba/gui/pluginscandialog.ui
@@ -13,6 +13,12 @@
     <height>237</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>700</width>
+    <height>16777215</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>[Jamtaba] Scanning plugins ...</string>
   </property>
